profilelist1exp/unpackaged/objects/GDM_Request__c.object
<CustomObject>
    <description>GDM Requests include the following:
 Create Account / Reactivate Account
 Change Ownership
 Customer Linkage
 Org Change
 SFDC Updates
 Access to Tools
 Deactivate Account
 Account Report
 Account Update</description>
    <fields>
        <fullName>AM_Affinity_Company_Name__c</fullName>
        <description>Automatch field</description>
        <label>Affinity Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_DUNS_Employee_Count__c</fullName>
        <description>Automatch field</description>
        <label>DUNS Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_DUNS_SIC_Code__c</fullName>
        <description>Automatch field</description>
        <label>DUNS SIC Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Existing_PID__c</fullName>
        <description>AutoMatch field</description>
        <label>Existing PID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Reviewed_Status__c</fullName>
        <description>Automatch field - Match, No Match, Reviewed</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Status__c</fullName>
        <formula>IF ( NOT ISBLANK(AM_Existing_PID__c), &quot;&amp;lt;DIV color=&apos;red&apos;&amp;gt; Match found  &amp;lt;/&amp;gt;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Suggested_DUNS__c</fullName>
        <description>Automatch field</description>
        <label>Suggested DUNS Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Tax_ID__c</fullName>
        <description>Automatch field</description>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountAccessLevel__c</fullName>
        <description>Account Team Member history for Account Access Level</description>
        <label>AccountAccessLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account  ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Name of the Account</description>
        <inlineHelpText>Name of the account in Latin (English) alphabet</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Badge__c</fullName>
        <description>Active when request is an Account Request</description>
        <label>Account Owner Badge</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>A=Active, I=Inactive</description>
        <label>Account Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <label>Account Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GDM Requests</relationshipLabel>
        <relationshipName>GDM_Requests_To_Acct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Change Ownership action</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>End Date/Deactivate</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>108-Link</fullName>
                </value>
                <value>
                    <fullName>109-Drop</fullName>
                </value>
                <value>
                    <fullName>110-Re-Assign</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
                <value>
                    <fullName>Sub-Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Added_Comments__c</fullName>
        <description>Comments so far</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Added Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Comments__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <label>Approval/Rejection Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approve_renaming_of_your_username__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if you approve renaming of your username in the trial version of SalesForce.com (Sandbox). You cannot have the same username for both trial/production versions.</description>
        <inlineHelpText>Check this if you approve renaming of your username in the trial version of SalesForce.com (Sandbox). You cannot have the same username for both trial/production versions.</inlineHelpText>
        <label>Do you approve renaming  your username?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected_By__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <inlineHelpText>The individual that approved or rejected the Buddy Access Request</inlineHelpText>
        <label>Approved/Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Rejected_Date__c</fullName>
        <description>The field is available on the Buddy Access request</description>
        <inlineHelpText>The date on which the Buddy Access Request was approved/rejected</inlineHelpText>
        <label>Approved/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_1_Response__c</fullName>
        <label>Approver 1 Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2_Response__c</fullName>
        <description>Any comments by the 2nd approver goes here</description>
        <label>Approver 2 Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_1__c</fullName>
        <description>for APJ</description>
        <label>Area 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_2__c</fullName>
        <description>for APJ</description>
        <label>Area 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Name__c</fullName>
        <description>This field holds the name of the Assigned_To lookup value. This value is set automatically from the selected Assigned To lookup value after user submits the form. Kicked off by a workflow.</description>
        <label>Assigned To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DPT handling this request</description>
        <inlineHelpText>Select the DPT member assigned to this request</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BUID__c</fullName>
        <description>Business Unit ID</description>
        <label>BUID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Badge_Number__c</fullName>
        <label>Badge Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buddy_Access_End_Date__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <inlineHelpText>The date on which Buddy Access needs to be removed</inlineHelpText>
        <label>Buddy Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buddy_Access_Start_Date__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <inlineHelpText>The date from which Buddy Access is requested</inlineHelpText>
        <label>Buddy Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buddy_Access_Status__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <label>Buddy Access Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved and scheduled</fullName>
                </value>
                <value>
                    <fullName>Providing Access</fullName>
                </value>
                <value>
                    <fullName>Access provided</fullName>
                </value>
                <value>
                    <fullName>Removing Access</fullName>
                </value>
                <value>
                    <fullName>Access removed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buddy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is available on the Buddy Access request</description>
        <inlineHelpText>The Rep that will be the back-up for the Rep on Leave</inlineHelpText>
        <label>Buddy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseAccessLevel__c</fullName>
        <description>Account Team Member history for Case Access Level</description>
        <label>CaseAccessLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <description>This field is available on the Buddy Access request</description>
        <inlineHelpText>Optionally, feel free to provide any additional comments, relevant to this request</inlineHelpText>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Relevant comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Area_Code__c</fullName>
        <description>Phone Area Code for Contact</description>
        <inlineHelpText>Area code of the phone</inlineHelpText>
        <label>Contact Phone Area Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <inlineHelpText>Use format XXX-XXXXX. Area code-Main Number. (Example: 212-9994321)</inlineHelpText>
        <label>Contact Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>99-GLOBAL</fullName>
                </value>
                <value>
                    <fullName>AD-ANDORRA</fullName>
                </value>
                <value>
                    <fullName>AE-UNITED ARAB EMIRATES</fullName>
                </value>
                <value>
                    <fullName>AF-AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>AG-ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>AI-ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>AL-ALBANIA</fullName>
                </value>
                <value>
                    <fullName>AM-ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AN-NETHERLANDS ANTILLES</fullName>
                </value>
                <value>
                    <fullName>AO-ANGOLA</fullName>
                </value>
                <value>
                    <fullName>AR-ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>AT-AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AU-AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AW-ARUBA</fullName>
                </value>
                <value>
                    <fullName>AZ-AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BA-BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BB-BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BD-BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BE-BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BF-BURKINA FASO</fullName>
                </value>
                <value>
                    <fullName>BG-BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BH-BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BI-BURUNDI</fullName>
                </value>
                <value>
                    <fullName>BJ-BENIN</fullName>
                </value>
                <value>
                    <fullName>BM-BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BN-BRUNEI DARUSSALAM</fullName>
                </value>
                <value>
                    <fullName>BO-BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BR-BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BS-BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BT-BHUTAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Request_Status__c</fullName>
        <description>current request status</description>
        <label>Current_Request_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Link_Number__c</fullName>
        <description>Customer Link Number</description>
        <inlineHelpText>This is used for US/Canada region</inlineHelpText>
        <label>Customer Link Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_Source__c</fullName>
        <label>Customer Number Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US DOMS</fullName>
                </value>
                <value>
                    <fullName>LA DOMS</fullName>
                </value>
                <value>
                    <fullName>Omega</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Contact)</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GDM Requests</relationshipLabel>
        <relationshipName>GDM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DLR_Load_Type__c</fullName>
        <label>DLR Load Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Request__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DS_Reviewer_Comments__c</fullName>
        <description>Comments of the DS Reviewer</description>
        <label>DS Reviewer Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DS_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDM_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivate_Reason__c</fullName>
        <description>Reason for Deactivation</description>
        <label>Deactivate Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06 Replaced-101</fullName>
                </value>
                <value>
                    <fullName>07-Duplicated-101</fullName>
                </value>
                <value>
                    <fullName>08-Merger-101</fullName>
                </value>
                <value>
                    <fullName>08-Out of Business-101</fullName>
                </value>
                <value>
                    <fullName>09-Invalid Account-101</fullName>
                </value>
                <value>
                    <fullName>84-Suppress reporting on Global Account-101</fullName>
                </value>
                <value>
                    <fullName>796-Account / sub-account of business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dispatch_Date__c</fullName>
        <description>This is the date/time the request is assigned to the DPT by the DPT Team Lead. This field is only editable by the DPT</description>
        <label>Dispatch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_you_wish_to_end_date_current_rep__c</fullName>
        <description>Asks the user if the current rep is to be end-dated</description>
        <inlineHelpText>Select &apos;Yes&apos; if you wish to end-date the current Rep; otherwise, select &apos;No&apos;</inlineHelpText>
        <label>Do you wish to end-date current rep?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicated_Account_ID__c</fullName>
        <description>This field is required when Deactivating an Account where the Reason is &apos;07-Duplicated-101&apos;  ** This is also functions as the Parent ID Account if Sub-Account ID is chosen</description>
        <inlineHelpText>Enter the Account ID if the Action is Sub-Account</inlineHelpText>
        <label>Duplicated Account ID/Parent Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>This field is active in Change Ownership, Customer Linkage, People Change</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_SFDC_Access__c</fullName>
        <description>Used in Get Access To Tools</description>
        <inlineHelpText>Use only if &quot;Update SFDC Access&quot; is selected</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week__c</fullName>
        <description>Example: 2015-WK13</description>
        <label>Fiscal Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDM_Help__c</fullName>
        <formula>HYPERLINK(&quot;http://intranet.dell.com/sites/GRCDI/globalintake/app/SitePages/GDMSFDC_Help.aspx&quot;, &quot;GDM Help&quot;, &quot;_blank&quot;)</formula>
        <inlineHelpText>Click here to get more information or help.</inlineHelpText>
        <label>GDM Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDM_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDM Request</label>
        <referenceTo>GDM_Request__c</referenceTo>
        <relationshipLabel>GDM Requests</relationshipLabel>
        <relationshipName>GDM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GTM_Acct_Type_Desc__c</fullName>
        <inlineHelpText>GTM Account Type Description</inlineHelpText>
        <label>GTM Acct Type Desc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acq</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Not Assigned</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Retention &amp; Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTM_Coverage_Type_Description__c</fullName>
        <inlineHelpText>GTM Coverage Type Description</inlineHelpText>
        <label>GTM Cvrg Type Desc</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inside Led</fullName>
                </value>
                <value>
                    <fullName>Partner Led</fullName>
                </value>
                <value>
                    <fullName>Web/Queue</fullName>
                </value>
                <value>
                    <fullName>Outside Led</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTM_Cvrg_Type_Desc__c</fullName>
        <inlineHelpText>GTM Account Segment Description</inlineHelpText>
        <label>GTM Acct Seg Desc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Unsegmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GTM_Geo_Breakout_Desc__c</fullName>
        <inlineHelpText>GTM Geo Breakout Desc</inlineHelpText>
        <label>GTM Geo Breakout Desc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Antwerp &amp; Limburg</fullName>
                </value>
                <value>
                    <fullName>Canada Central</fullName>
                </value>
                <value>
                    <fullName>Canada East</fullName>
                </value>
                <value>
                    <fullName>Canada West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Central North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>East &amp; West Flanders</fullName>
                </value>
                <value>
                    <fullName>Fl-Brabant &amp; Brussels (Fl)</fullName>
                </value>
                <value>
                    <fullName>France IDF (Paris)</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India East</fullName>
                </value>
                <value>
                    <fullName>India North</fullName>
                </value>
                <value>
                    <fullName>India South</fullName>
                </value>
                <value>
                    <fullName>India West</fullName>
                </value>
                <value>
                    <fullName>Indo China</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Levante</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Mongolia</fullName>
                </value>
                <value>
                    <fullName>Msip</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>Not Assigned</fullName>
                </value>
                <value>
                    <fullName>Nsw Act</fullName>
                </value>
                <value>
                    <fullName>Nz</fullName>
                </value>
                <value>
                    <fullName>Qld Nt</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_passed_SFDC_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Follow the link below to take the training: 
https://dellservices.dell.com/sig/CoP/sfdc/Pages/request-access.aspx</inlineHelpText>
        <label>Have you passed SFDC Training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <label>Industry Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if this request is a batch request. Make sure that you also attach the spreadsheet template containing the list of items you want processed.</inlineHelpText>
        <label>Is Batch ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is active in Deactivate Account</description>
        <label>Deactivate ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Buddy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Buddy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SFDC_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Customer linkage</description>
        <label>Is SFDC Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sub_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if an account is a sub-account</description>
        <label>Is Sub-Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Number__c</fullName>
        <inlineHelpText>Used in US/Canada</inlineHelpText>
        <label>Link Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>